main/timer-log/src/main/jkube/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    camel.apache.org/integration: timer-log
    app.kubernetes.io/runtime: camel
  name: timer-log
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    camel.apache.org/integration: timer-log
  type: NodePort
